add --text-color-dark var

--- a/index.scss
+++ b/index.scss
@@ -5,6 +5,7 @@
   --red-team-dark: hsl(356, 100%, 59%);
   --accent-color: #D8EF5E;
   --text-color: #fafafa;
+  --text-color-dark: #051c2c;
   --background-color: #051c2c;
   --primary-font-family:  monospace;
   --secondary-font-family: sans-serif;
