--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,13 @@
 :root {
-  --blue-team: #029EF7;
+  --blue-team: #029ef7;
   --blue-team-dark: hsl(202, 98%, 40%);
-  --red-team: #FF5A64;
+  --red-team: #ff5a64;
   --red-team-dark: hsl(356, 100%, 59%);
-  --accent-color: #D8EF5E;
+  --accent-color: #d8ef5e;
   --text-color: #fafafa;
   --text-color-dark: #051c2c;
   --background-color: #051c2c;
-  --primary-font-family:  monospace;
+  --primary-font-family: monospace;
   --secondary-font-family: sans-serif;
   --logo-path: url(/pages/op-plugin-theming/active/logo.png);
 }
