--- a/index.scss
+++ b/index.scss
@@ -7,6 +7,7 @@
   --text-color: #fafafa;
   --text-color-dark: #051c2c;
   --background-color: #051c2c;
+  --background-light-color: #051c2c;
   --primary-font-family: monospace;
   --secondary-font-family: sans-serif;
   --logo-path: url(/pages/op-plugin-theming/active/logo.png);
