--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,13 @@
 :root {
   --blue-team: #029ef7;
-  --blue-team-dark: hsl(202, 98%, 40%);
+  --blue-team-dark: #0281ca;
   --red-team: #ff5a64;
-  --red-team-dark: hsl(356, 100%, 59%);
+  --red-team-dark: #ff2e3c;
   --accent-color: #d8ef5e;
   --text-color: #fafafa;
   --text-color-dark: #051c2c;
   --background-color: #051c2c;
-  --background-light-color: #051c2c;
+  --background-light-color: #0a3a5c;
   --primary-font-family: monospace;
   --secondary-font-family: sans-serif;
   --logo-path: url(/pages/op-plugin-theming/active/logo.png);
